fixed radio button alignment on trainee self reflection form

--- a/qa-portal-angular/projects/qa-common/src/app/rated-question/rated-question.component.css
+++ b/qa-portal-angular/projects/qa-common/src/app/rated-question/rated-question.component.css
@@ -14,10 +14,17 @@
   display: flex;
   justify-content: center;
   margin-bottom: 15px;
+ 
+}
+.qa-radio-btn-innerlayout {
+  
+  text-align: center;
+  margin: 5px auto;
+  min-width: 5px;
 }
 
 .qa-radio-btn {
-  margin-right: 25px;
+  width: 20px;
   border-width: 1px;
   border-color: black;
   color: #004050;
